--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^19.1.1"
+    "@types/react": "^19.1.1",
+    "@types/react-dom": "^19.1.2"
   }
 }
